--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
         "error",
         { "allow": ["_id"] }
       ],
-      "quotes": ["error", "double"]
+      "quotes": ["error", "double"],
+      "comma-dangle": ["error", {"array": "always"}]
     }
 }
