--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon --inspect -- app.js",
-    "lint": "npx eslint ."
+    "lint": "npx eslint . --fix"
   },
   "repository": {
     "type": "git",
