pr13 fix review1 comments

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,6 @@
         "error",
         { "allow": ["_id"] }
       ],
-      "quotes": ["error", "double"]
+      "quotes": ["error", "single"]
     }
 }
