--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "homepage": "https://github.com/AlesyaMax/express-mesto-gha#readme",
   "devDependencies": {
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "core-js": "^3.32.2",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "validator": "^13.11.0"
   }
 }
