--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   "homepage": "https://github.com/AlesyaMax/express-mesto-gha#readme",
   "devDependencies": {
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.2",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "validator": "^13.11.0"
   }
