--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         { "allow": ["_id"] }
       ],
       "quotes": ["error", "single"],
-      "consistent-return": "off"
+      "consistent-return": "off",
+      "func-names": "off"
     }
 }
